<resources>
    <string name="app_name">Actividad 3.1.3</string>
    <string name="login">Login</string>
    <string name="moto_shared">Moto Shared</string>
    <string name="moto">moto</string>
    <string name="enter_name">Enter Name</string>
    <string name="password">Password</string>
    <string name="intentos">Intentos:</string>
    <string name="logueado">Logueado:</string>
    <string name="login_button">LOGIN</string>
    <string name="cancel">CANCEL</string>
    <string name="_0">0</string>
    <string name="_00">0</string>
</resources>